Swagger documentation added
