# app.js
@@ -37,10 +37,10 @@ app.use(xss())
 
 // routes
 app.get("/", (req, res) => {
-    res.send("<h1>Jobs API v2</h1><a href='/api-docs'>API Documentation</a>")
+    res.send("<h1>Jobs API v2</h1><a href='/api-docs'>API Documentation</a>");
 })
 
-app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDocument))
+app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDocument));
 
 app.use("/api/v1/auth", authRouter)
 app.use("/api/v1/alljobs", alljobs)
